# trackPlayer

./: CMakeLists.txt  MainWindow.cpp  MainWindow.h  main.cpp
Source/: Audio.cpp  Controller.cpp  Database.cpp  Main.cpp  Playlist.cpp  Tracklist.cpp
include/: Controller.h  FxSuite.h  ImageProvider.h  Playlist.h  TrackList.h  audio.h  database.h
resources/: resources.qrc  ui.qml
resources/images/: TrackPlayer.icns
resources/qml/: MainWindow.qml  qmldir
resources/qml/audio/: Cue.qml  Delay.qml  Filter.qml  Loop.qml
resources/qml/database/: Database.qml  Field.qml  FilterBar.qml  Playlist.qml  PlaylistBar.qml  SplitLine.qml  Tracklist.qml
resources/qml/extras/: ColorPalette.qml  CustomDial.qml  GeneralPopup.qml  InformationPopup.qml  KeyboardControls.qml  MainText.qml
resources/qml/metadata/: Artwork.qml  Cell.qml  Edit.qml  Metadata.qml  PlaybackLength.qml
resources/qml/playback/: Playback.qml  SelectTrackOverlay.qml  TrackLoader.qml  Transport.qml  TransportButton.qml
resources/qml/settings/: Settings.qml  SettingsEntry.qml  SettingsEntryButton.qml  SettingsEntryToggle.qml  ToolBarButton.qml
resources/qml/waveform/: Waveform.qml  WaveformBase.qml  WaveformOverview.qml  Waveforms.qml
tests/: CMakeLists.txt  testapp.cpp  tst_TestApp.qml
